--- a/example.html
+++ b/example.html
@@ -14,6 +14,10 @@
             <h1>Hello</h1>
             <h2>hi</h2>
             <h2>salam</h2>
+            <h1>khobi?</h1>
+            <!-- dare dorost mishe -->
+            <p>salam man daram yad migiram
+            </p>
         </div>
     </header>
 </body>
